tests/ui/g-route-nested-policy-not-promoted.stderr
error[E0080]: evaluation panicked: route scope recorded a controller policy annotation on only one arm
 --> src/global/program.rs
  |
  |         validate_all_roles(&summary);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::global::program::ValidatedProgram::<hibana::g::advanced::steps::RouteSteps<hibana::g::advanced::steps::SeqSteps<hibana::g::advanced::steps::SeqSteps<hibana::g::advanced::steps::PolicySteps<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::g::advanced::CanonicalControl<hibana::substrate::cap::advanced::LoopContinueKind>>>, hibana::g::advanced::steps::StepNil>, 10>, hibana::g::advanced::steps::StepNil>, hibana::g::advanced::steps::RouteSteps<hibana::g::advanced::steps::SeqSteps<hibana::g::advanced::steps::PolicySteps<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::g::advanced::CanonicalControl<hibana::substrate::cap::advanced::LoopContinueKind>>>, hibana::g::advanced::steps::StepNil>, 10>, hibana::g::advanced::steps::StepNil>, hibana::g::advanced::steps::PolicySteps<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopBreakKind>, hibana::g::advanced::CanonicalControl<hibana::substrate::cap::advanced::LoopBreakKind>>>, hibana::g::advanced::steps::StepNil>, 10>>>, hibana::g::advanced::steps::PolicySteps<hibana::g::advanced::steps::StepCons<hibana::g::advanced::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopBreakKind>, hibana::g::advanced::CanonicalControl<hibana::substrate::cap::advanced::LoopBreakKind>>>, hibana::g::advanced::steps::StepNil>, 10>>>::SUMMARY` failed inside this call
  |
note: inside `hibana::global::compiled::lowering::seal::validate_all_roles`
 --> src/global/compiled/lowering/seal.rs
  |
  |     ProjectionSeal::<0>::validate_compiled_layout(summary.view());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_compiled_layout`
 --> src/global/compiled/lowering/seal.rs
  |
  |         Self::validate_route_projection_guarantees(view);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_projection_guarantees`
 --> src/global/compiled/lowering/seal.rs
  |
  | /                 Self::validate_route_scope(
  | |                     view,
  | |                     scope_markers,
  | |                     marker.scope_id,
  | |                     marker.controller_role,
  | |                     marker.linger,
  | |                 );
  | |_________________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_scope`
 --> src/global/compiled/lowering/seal.rs
  |
  | /         Self::validate_route_policy_consistency(
  | |             view,
  | |             arm0_enter_marker_idx,
  | |             arm0_end,
  | |             arm1_enter_marker_idx,
  | |             arm1_end,
  | |         );
  | |_________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_policy_consistency`
 --> src/global/compiled/lowering/seal.rs
  |
  |                 panic!("route scope recorded a controller policy annotation on only one arm");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |     &ValidatedProgram::<Steps>::SUMMARY
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
  --> tests/ui/g-route-nested-policy-not-promoted.rs:81:13
   |
81 |     let _ = CONTROLLER;
   |             ^^^^^^^^^^
